# python-project-template

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
notebooks/: HelloWorld.ipynb
